修改一些代码规范问题

--- a/src/main/resources/config/generate.yml
+++ b/src/main/resources/config/generate.yml
@@ -127,6 +127,7 @@ datasourceGroupList:
       FEE_MAX: 100
       FEE_MIN: 0
       FEE_RATE: 1
+    ignoreCol: PARTITION_FIELD
   - dataSourceId: his
     columnConfig:
       - colName: STK_CODE
