1.ori18n.jar使用依赖的形式，不使用外部jar，需要自行安装到maven仓库 2.使用封闭类处理策略类 3.修改删除的方法，增加一个通过主键删除的方法，现存两个，一个通过构建sql批量删除，一个使用数据的主键单个删除，在数据量大时性能都不好，后续考虑更优的策略

--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>orai18n</artifactId>
             <version>21.7.0.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/lib/orai18n.jar</systemPath>
+            <!--<scope>system</scope>-->
+            <!--<systemPath>${project.basedir}/src/main/resources/lib/orai18n.jar</systemPath>-->
         </dependency>
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
