1.使用注解，结合工具类在启动时加载所有的策略实现，增强可扩展性 2.将配置加载和生成数据操作分离，把一些操作移到数据加载和配置加载阶段执行

--- a/src/main/resources/config/generate.yml
+++ b/src/main/resources/config/generate.yml
@@ -1,4 +1,4 @@
-generate: kbssoptsett
+generate: mysql
 jdbcTypeDefaultValue:
   VARCHAR: 1
   CHAR: 1
@@ -14,7 +14,7 @@ dataConfigList:
         strategy: default
     tableConfig:
       - tableName: a
-        genNum: 0
+        genNum: 100000
   - dataSourceId: cur
     columnConfig:
       - colName: STK_CODE,REC_SN,FEE_TEMPLATE_ID,INT_ORG,FEE_CFG_SN,FEE_CFG_ID,FEE_TEMPLATE_CFG_SN,ORIGIN_TMPL_SN
