读取系统表配置，转换成生成数据要用的表配置

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>7.4.1.jre8</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15to18</artifactId>
+            <version>1.69</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
