--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,18 @@
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>orai18n</artifactId>
             <version>21.7.0.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/lib/orai18n.jar</systemPath>
+            <!--<scope>system</scope>-->
+            <!--<systemPath>${project.basedir}/src/main/resources/lib/orai18n.jar</systemPath>-->
         </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>com.microsoft.sqlserver</groupId>-->
+        <!--    <artifactId>mssql-jdbc</artifactId>-->
+        <!--    <version>7.4.1.jre8</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>7.4.1.jre8</version>
+            <version>8.4.1.jre11</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
