修改数据源是要方式，统一使用Dbutils，统一key的生成

--- a/src/main/resources/config/generate.yml
+++ b/src/main/resources/config/generate.yml
@@ -1,6 +1,6 @@
 generate-datasource:
-  - id: test
-    table-list: a
+  - id: fspt3
+    table-list: DTS_OPT_PERBIZ_DATA
 #  - id: kbssoptsett
 #    table-list: CUST_AUTO_EXE
 #  - id: fspt3
