--- a/src/main/resources/config/generate.yml
+++ b/src/main/resources/config/generate.yml
@@ -1,6 +1,6 @@
 generate-datasource:
-  - id: fspt3
-    table-list: DTS_OPT_PERBIZ_DATA
+  - id: kbssoptsett
+    table-list: CUBSB_LOG
 #  - id: kbssoptsett
 #    table-list: CUST_AUTO_EXE
 #  - id: fspt3
